Some amendments toward the Universal Council app + phases 15A and 15B
